# apartment_scraper

./: .gitignore  Makefile  README.md  compose.yaml  docker-compose.yaml  dockerfile  output.html  pyproject.toml  requirements.txt  setup.cfg
apartment_scraper/: __init__.py  __main__.py  analysis.py  apartments.py  api.py  data_exporter.py  data_loader.py  map.py  models.py  requester.py  schemas.py  scraper.py
apartment_scraper/api/: api.py  schemas.py
apartment_scraper/immowelt/: __init__.py  parse.py  request.py  requester.py
apartment_scraper/parsers/: willhaben.py
apartment_scraper/willhaben/: __init__.py  area_id.py  haus.py  parse.py  request.py  wohnungen.py
deployment/: database-deployment.yaml  database-service.yaml  web-deployment.yaml  web-service.yaml  web-tcp-service.yaml
immowelt/: apartments.py
wohnticket/: main.py
