[metadata]
name = apartment_scraper
version = attr: apartment_scraper.__version__
summary = "Tool for evaluating apartments using APIs from Austrian Immobilien search engines."
author = "Robert Nyström"
author_email = "golgafrincham@gmail.com"
license = "MIT"

[options]
packages = find:
install_requires =
    requests>=2.28.2
    SQLAlchemy>=2.0.12
python_requires = >=3.11